Add some classes, layouts, and icons |  Update .gitignore | Refactoring some classes and layouts